--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ a{
 }
 
 #modal {
-    /* height: 500px; */
     width: 500px;
     background-color: white;
     border-radius: 32px;
@@ -32,21 +31,18 @@ a{
 
 #modal-header {
     width: 100%;
-    /* height: 20%; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 #modal-main {
     width: 100%;
-    /* height: 60%; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 #modal-footer {
     width: 100%;
-    /* height: 20%; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,4 +53,8 @@ tr,
 th,
 td {
     border: black 1px solid;
+}
+
+.botaoCadastro{
+    margin-left: 90%;
 }
